gitops/clusters/home/apps/pyroscope/manifests/pyroscope.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyroscope
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: cloudflare-ca
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.lab.techyon.dev/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.lab.techyon.dev/oauth2/start?rd=https://$host$escaped_request_uri"
    gethomepage.dev/description: Continuous Profiling
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: pyroscope.png
    gethomepage.dev/name: Pyroscope
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pyroscope.lab.techyon.dev
      secretName: pyroscope-tls
  rules:
    - host: pyroscope.lab.techyon.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pyroscope
                port:
                  number: 4040
